[FIX] website_slides: make text readable in white navigation bar
The navigation bar inside the Courses main page and the courses list
are forced to white with an inline style.
When a dark palette is used it makes the text color white as well.
Because of this the texts in those navigation bars cannot be read
anymore.

This commit resets the navigation link colors when the background is
forced to white. It also resets the fuzzy search term link's color and
the extra navigable information links of search autocomplete links such
as product's categories.

Steps to reproduce:
- Pick a dark palette.
- Go to the "Courses" page.
=> "All courses" and its icon were not visible anymore.

task-2855511

closes odoo/odoo#97144

X-original-commit: 852acad7585fa884f365dd2fc10348446d56d4e9

--- a/addons/website_slides/static/src/scss/website_slides.scss
+++ b/addons/website_slides/static/src/scss/website_slides.scss
@@ -109,6 +109,19 @@ $truncate-limits: 2, 3, 10;
     .o_wslides_home_nav {
         top: -40px;
 
+        // TODO Remove me in master
+        [style*="background: white"] .nav-link {
+            color: $navbar-light-color !important;
+
+            @include hover-focus {
+                color: $navbar-light-hover-color !important;
+            }
+
+            &.disabled {
+                color: $navbar-light-disabled-color !important;
+            }
+        }
+
         @include media-breakpoint-up(lg) {
             font-size: 1rem;
 
